Fix truncated focus ring on last item of small-device nav

--- a/src/assets/sass/modules/_navigation.scss
+++ b/src/assets/sass/modules/_navigation.scss
@@ -41,6 +41,10 @@
         border-top: 1px solid $color-border;
         background-color: $color-gradient-from;
 
+        &:last-child {
+            border-bottom: 1px solid transparent;
+        }
+
         &:hover {
             background-color: $color-background-box;
         }
